<resources>
    <string name="app_name">MSD-Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="explore_genres">Explore Genres</string>
    <string name="explore_your_genres">Explore Your Genres</string>
    <string name="genre1">Genre1</string>
    <string name="genre2">Genre2</string>
    <string name="genre3">Genre3</string>
    <string name="genre5">Genre5</string>
    <string name="genre4">Genre4</string>
    <string name="genre6">Genre6</string>
    <string name="map_title">See where to buy your songs</string>
    <string name="see_all_songs">See All Songs</string>
    <string name="see_all_movies">See Showings ></string>
    <string name="see_movie_showing_locations">See Cinema Locations ></string>
    <string name="your_top_10">Your Top 10</string>
    <string name="update_your_genres">Update Your Genres ></string>

    <string name="text_home">Home Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_genre_list">Your Genres</string>
    <string name="menu_movie_list">Your Movies</string>
    <string name="movie_preferences_title">Movie Preferences</string>
    <string name="sub_title">Ross McElhinney : C19430472</string>
    <string name="add_genre">Add Genre</string>
    <string name="remove_genre_btn">Remove</string>
    <string name="generated_movies">Generated Movies</string>
    <string name="menu_movie_map">Movie Map</string>
    <string name="click_to_remove">Click to remove</string>
    <string name="title_activity_maps">Map</string>
</resources>