<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.msd_preferences.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.msd_preferences.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.msd_preferences.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_genre_list"
        android:name="com.example.msd_preferences.ui.genre_list.GenreListFragment"
        android:label="Your Genres"
        tools:layout="@layout/fragment_genre_list" />
    <fragment
        android:id="@+id/nav_movie_list"
        android:name="com.example.msd_preferences.ui.movie_list.MovieListFragment"
        android:label="Your Movies"
        tools:layout="@layout/fragment_movie_list" />
</navigation>