<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_home_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_your_genres"
        app:layout_constraintTop_toTopOf= "parent"
        app:layout_constraintStart_toStartOf= "parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:layout_editor_absoluteX="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_marginEnd="8dp"
                android:maxWidth="20dp"
                android:ellipsize="end"
                android:maxLines="1" />

            <Button
                android:id="@+id/button2"
                android:layout_marginEnd="8dp"
                android:maxWidth="20dp"
                android:ellipsize="end"
                android:maxLines="1"/>

            <Button
                android:id="@+id/button3"
                android:maxWidth="20dp"
                android:ellipsize="end"
                android:maxLines="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_marginEnd="8dp"
                android:maxWidth="20dp"
                android:ellipsize="end"
                android:maxLines="1"/>

            <Button
                android:id="@+id/button5"
                android:layout_marginEnd="8dp"
                android:maxWidth="20dp"
                android:ellipsize="end"
                android:maxLines="1"/>

            <Button
                android:id="@+id/button6"
                android:maxWidth="20dp"
                android:ellipsize="end"
                android:maxLines="1"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <Button
        android:id="@+id/updateGenresBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update_your_genres"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/songsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateGenresBtn"
        android:text="@string/your_top_10"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/songsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songsTitle" >
        <Button
            android:id="@+id/seeShowingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all_movies"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/seeShowingLocationsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_movie_showing_locations"
            android:textSize="12sp"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/black"/>
    </LinearLayout>
    <ListView
        android:id="@+id/home_movie_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/songsHeader"/>

</androidx.constraintlayout.widget.ConstraintLayout>
